# jobfinder

./: .gitignore  Executive Summary.md  MVP Blueprint.md  MVP Implementation Plan.md  README.md  pyproject.toml  pytest.ini  report.md  setup.py  test.py
src/jobfinder/: crew.py  main.py
src/jobfinder/config/: agents.yaml  tasks.yaml  tools.yaml
src/jobfinder/tools/: custom_tool.py
tests/test_agents/: test_agent_creation.py
