[project]
name = "jobfinder"
version = "0.1.0"
description = "JobFinder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
jobfinder = "jobfinder.main:run"
run_crew = "jobfinder.main:run"
train = "jobfinder.main:train"
replay = "jobfinder.main:replay"
test = "jobfinder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
